Modificando arquivo sobre.html

--- a/sobre.html
+++ b/sobre.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Página Sobre</h1>
+    <p>Aprendendo HTML e CSS.</p>
+    <p>Aprendento sobre Git e GitHub.</p>
 </body>
 </html>
